--- a/excercises/03_Quantum_Systems/01_State_Space/HW.ipynb
+++ b/excercises/03_Quantum_Systems/01_State_Space/HW.ipynb
@@ -18,6 +18,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ochos = [1 for i in range(1500)]\n",
+    "tres = [1 for i in range(1499)]\n",
+    "\n",
+    "labels = ochos + tres\n",
+    "\n",
+    "df[\"labels\"] = labels"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
