Add new notes on entanglement and rename spectral decomp

--- a/notes/03_Quantum_Systems/01_State_Space/02_composite_systems.ipynb
+++ b/notes/03_Quantum_Systems/01_State_Space/02_composite_systems.ipynb
@@ -155,26 +155,25 @@
     "\n",
     "Purification is the process of constructing a pure state of a larger composite system, such that the reduced state of a subsystem is equivalent to the original mixed state. The idea is to introduce an auxiliary subsystem, called the reference system, and create a pure entangled state between the original system and the reference system.\n",
     "\n",
-    "Given a density matrix $\\rho_A$ of a quantum system $A$ with Hilbert space $\\mathcal{H}_A$, the goal of purification is to find a reference system $R$ with Hilbert space $\\mathcal{H}R$ and a pure state $|\\Psi{AR}\\rangle \\in \\mathcal{H}_A \\otimes \\mathcal{H}R$, such that $\\text{Tr}R(|\\Psi{AR}\\rangle \\langle \\Psi{AR}|) = \\rho_A$.\n",
+    "Given a density matrix $\\rho_A$ of a quantum system $A$ with Hilbert space $\\mathcal{H}_A$, the goal of purification is to find a reference system $B$ with Hilbert space $\\mathcal{H}B$ and a pure state $|\\Psi_{AB}\\rangle \\in \\mathcal{H}_A \\otimes \\mathcal{H}B$, such that $\\text{Tr}B(|\\Psi_{AB}\\rangle \\langle \\Psi_{AB}|) = \\rho_A$.\n",
     "\n",
     "A purification of $\\rho_A$ can be constructed using the following procedure:\n",
     "\n",
     "Diagonalize the density matrix $\\rho_A = \\sum_i p_i |a_i\\rangle \\langle a_i|$.\n",
-    "Choose an orthonormal basis ${|r_i\\rangle}$ for the reference system $R$ such that $|\\text{dim}(\\mathcal{H}_R)| \\geq |\\text{dim}(\\mathcal{H}_A)|$.\n",
-    "Define the purification $|\\Psi_{AR}\\rangle$ as:\n",
+    "Choose an orthonormal basis ${|r_i\\rangle}$ for the reference system $B$ such that $|\\text{dim}(\\mathcal{H}_B)| \\geq |\\text{dim}(\\mathcal{H}_A)|$.\n",
+    "Define the purification $|\\Psi_{AB}\\rangle$ as:\n",
     "\\begin{equation}\n",
-    "|\\Psi_{AR}\\rangle = \\sum_i \\sqrt{p_i} |a_i\\rangle \\otimes |r_i\\rangle.\n",
+    "|\\Psi_{AB}\\rangle = \\sum_i \\sqrt{p_i} \\cdot |a_i\\rangle |b_i\\rangle.\n",
     "\\end{equation}\n",
     "\n",
     "\n",
-    "It can be verified that $\\text{Tr}R(|\\Psi{AR}\\rangle \\langle \\Psi_{AR}|) = \\rho_A$. Note that purification is not unique, as different choices of the reference system or basis can lead to different purifications.\n",
+    "It can be verified that $\\text{Tr}B(|\\Psi_{AB}\\rangle \\langle \\Psi_{AB}|) = \\rho_A$:\n",
+    "\n",
+    "$$\\text{Tr}_B(|\\Psi_{AB}\\rangle \\langle \\Psi_{AB}|) = \\sum_i \\sum_j \\sqrt{p_i p_j} \\langle a_i b_j|a_j b_j\\rangle = \\sum_i p_i |a_i\\rangle \\langle a_i| = \\rho_A$$\n",
+    "\n",
+    "Note that purification is not unique, as different choices of the reference system or basis can lead to different purifications.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
