--- a/notes/03_Quantum_Systems/01_State_Space/04_spectral_decomp.ipynb
+++ b/notes/03_Quantum_Systems/01_State_Space/04_spectral_decomp.ipynb
@@ -28,15 +28,15 @@
     "\n",
     "$$ A = \\sum_i \\lambda_i \\ket{\\psi_i}\\bra{\\psi_i} $$\n",
     "\n",
-    "where λ_i are the eigenvalues of A, and |ψ_i⟩ are the corresponding eigenvectors, which form an orthonormal basis for the Hilbert space. This decomposition allows us to represent A as a weighted sum of projection operators |ψ_i⟩⟨ψ_i|, with the weights given by the eigenvalues λ_i.\n",
+    "where $\\lambda_i$ are the eigenvalues of A, and $\\ket{\\psi}$ are the corresponding eigenvectors, which form an orthonormal basis for the Hilbert space. This decomposition allows us to represent A as a weighted sum of projection operators $\\ket{\\psi}\\bra{\\psi}$, with the weights given by the eigenvalues $\\lambda_i$.\n",
     "\n",
-    "An important application of spectral decomposition in quantum mechanics is the analysis of observables, which are represented by Hermitian operators. When a quantum system is in a state |ψ⟩, the expectation value of an observable A is given by:\n",
+    "An important application of spectral decomposition in quantum mechanics is the analysis of observables, which are represented by Hermitian operators. When a quantum system is in a state $\\ket{\\psi}$, the expectation value of an observable A is given by:\n",
     "\n",
     "$$\\braket{A} = \\braket{\\psi|A|\\psi} = \\sum_i \\lambda_i \\braket{\\psi_i|\\psi}^2$$\n",
     "\n",
-    "The spectral decomposition allows us to express the expectation value as a weighted sum of eigenvalues, where the weights are determined by the overlap of the state |ψ⟩ with the eigenvectors of A.\n",
+    "The spectral decomposition allows us to express the expectation value as a weighted sum of eigenvalues, where the weights are determined by the overlap of the state $\\ket{\\psi}$ with the eigenvectors of A.\n",
     "\n",
-    "As an example, consider a quantum system described by the Hamiltonian operator H. The spectral decomposition of H provides us with the energy eigenvalues (E_i) and the corresponding energy eigenstates (|ψ_i⟩). The time evolution of the system is governed by the Schrödinger equation, which can be solved more easily by expressing the state vector in terms of the energy eigenstates:\n",
+    "As an example, consider a quantum system described by the Hamiltonian operator H. The spectral decomposition of H provides us with the energy eigenvalues (E_i) and the corresponding energy eigenstates ($\\ket{\\psi}$). The time evolution of the system is governed by the Schrödinger equation, which can be solved more easily by expressing the state vector in terms of the energy eigenstates:\n",
     "\n",
     "$$\\ket{\\psi(t)} = \\sum_i c_i e^{-iE_it/\\hbar} \\ket{\\psi_i}$$\n",
     "\n",
@@ -44,6 +44,12 @@
     "\n",
     "In summary, spectral decomposition is a powerful tool for understanding the properties and behavior of quantum systems. It allows us to decompose Hermitian operators, such as observables, into their eigenvalues and eigenvectors, providing insight into the underlying structure and dynamics of quantum systems."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
