--- a/problem_sets/Applied_QM/04/solution.ipynb
+++ b/problem_sets/Applied_QM/04/solution.ipynb
@@ -51,9 +51,9 @@
     "\n",
     "$$\\langle n'm'l'|[\\hat L_z, \\hat z] |nml\\rangle = (m-m')\\langle n'm'l'|z|nml\\rangle$$\n",
     "\n",
-    "where we have used the fact that $[\\hat L_z, \\hat z] = i\\hbar \\hat L_z$. Thus, we notice that all the transitions get to zero unless $m = m'$. And the $s$ state has $m = 0$, therefore we can infer that the only possible transition is from $m` = 0$ to $m = 0$. \n",
+    "where we have used the fact that $[\\hat L_z, \\hat z] = i\\hbar \\hat L_z$. Thus, we notice that all the transitions get to zero unless $m = m'$. And the $s$ state has $m = 0$, therefore we can infer that the only possible transition is from $m` = 0$ to $m = 0$. Aditionally, we are only accepting transitions from $n` = n+1$, therefore we get only the state:\n",
     "\n",
-    "$$\\ket{f} = \\ket{110}$$\n",
+    "$$\\ket{f} = \\ket{210}$$\n",
     "\n",
     "\n"
    ]
@@ -63,6 +63,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## b)\n",
+    "\n",
     "We'll use time-dependent perturbation theory to solve this problem. This allows us to calculate the probability of a transition from an initial state to a final state when a perturbation is introduced. The initial state here is the $s$ state and the final state is the $p$ state with $m_l=0$.\n",
     "\n",
     "The time-dependent perturbation Hamiltonian for this problem is given by:\n",
@@ -73,25 +75,78 @@
     "\n",
     "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\left| \\int_{0}^{t} \\langle f|\\delta H|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
     "\n",
-    "where $\\omega_{fi} = (E_f - E_i)/\\hbar$ is the transition frequency. By replacing the perturbation, we get:\n",
+    "where $\\omega_{fi} = (E_f - E_i)/\\hbar$ is the transition frequency. By replacing in each one of the states we can first obtain the matrix elements. For this we'll use the fact that the $z$ operator is well defined in the $z$ direction, therefore we can write:\n",
     "\n",
-    "$$P(i\\rightarrow f) = \\frac{eE_0}{\\hbar^2} \\left| \\int_{0}^{t} \\langle f|z\\cdot sin(\\omega t)|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
+    "$$z=r\\cos\\theta = r\\sqrt{\\frac{4\\pi}{3}} Y_{10}(\\theta,\\phi)\\,.$$\n",
     "\n",
-    "$$\\langle f|z\\cdot sin(\\omega t)|i\\rangle= -q \\langle p|\\hat{z}|s\\rangle E_0 \\sin(\\omega t) = V_{ps} \\sin(\\omega t)$$\n",
+    "so that the matrix element are:\n",
     "\n",
-    "$$P_{s\\rightarrow p}(t) = \\frac{|V_{ps}|^2}{\\hbar^2} \\frac{\\sin^2[(\\omega_{ps} - \\omega)t/2]}{(\\omega_{ps} - \\omega)^2}$$\n",
+    "$$\\langle n'l'm' \\lvert z \\rvert nlm \\rangle = r\\sqrt{\\frac{4\\pi}{3}}\\int d\\Omega\\,\n",
+    "Y_{l'm'}^*(\\theta,\\phi)Y_{10}(\\theta,\\phi)Y_{lm}(\\theta,\\phi)$$\n",
     "\n",
-    "Now, lets calculate the transition matrix element $V_{ps}$:\n",
+    "Therefore, with the Clebsch–Gordan coefficients (3J symbols) we have, we can write:\n",
     "\n",
-    "$$\\langle f|\\delta H|i\\rangle = eE_0\\langle 110|z\\sin(\\omega t)|100\\rangle$$\n"
+    "$$\\langle n'l'm' \\lvert z \\rvert nlm \\rangle\n",
+    "=\\sqrt{{(2l'+1)(2l+1)}}\n",
+    "\\begin{pmatrix}\n",
+    "l' & 1 & l \\\\\n",
+    "0 & 0 & 0\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "l' & 1 & l \\\\\n",
+    "-m' & 0 & m\n",
+    "\\end{pmatrix}\n",
+    "\\int_0^{\\infty}dr\\,r^2\\,R_{n'l'}^*(r)rR_{nl}(r)\\,\n",
+    "$$\n",
+    "\n",
+    "where \n",
+    "$$\n",
+    "\\begin{pmatrix}\n",
+    "j_1 & j_2 & j_3 \\\\\n",
+    "m_1 & m_2 & m_3\n",
+    "\\end{pmatrix}\n",
+    " = \\frac{(-1)^{j_1-j_2-m_3}}{\\sqrt{2j_3+1}}\n",
+    "$$\n",
+    "\n",
+    "#### Using $f = \\ket{210}$ state\n",
+    "\n",
+    "$$\\bra{210} z \\ket{100} = \\sqrt{{(2\\cdot 1+1)(2\\cdot 0+1)}}\n",
+    "\\begin{pmatrix}\n",
+    "1 & 1 & 0 \\\\\n",
+    "0 & 0 & 0\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "1 & 1 & 0 \\\\\n",
+    "0 & 0 & 0\n",
+    "\\end{pmatrix}\n",
+    "\\int_0^{\\infty}dr\\,r^2\\,R_{n'1}^*(r)rR_{n0}(r)\\,\n",
+    "$$\n",
+    "\n",
+    "$$ = \\sqrt{{(2\\cdot 1+1)(2\\cdot 0+1)}}\n",
+    "\\Big(\\frac{(-1)^{1-1-0}}{\\sqrt{1}}\\Big)^2\n",
+    "\\int_0^{\\infty}dr\\,r^3\\ \\left(\\frac{e^{-r/2a}}{\\sqrt{6a}}\\right)\\left(2a^{3/2}e^{-3r/2a}\\right)\\,=\\sqrt{{3}}\\int_0^{\\infty}dr\\,\\left(r^3\\frac{2a^{3/2}e^{-2r/a}}{\\sqrt{6a}}\\right)\\,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    " = \\sqrt{{3}} \\sqrt{\\frac{2}{3}}\\int_0^{\\infty}dr\\,r^3\\,e^{-2r/a}\\, = \\sqrt{2}\\int_0^{\\infty}dr\\,r^3\\,e^{-2r/a}\\ = \\frac{3a^4}{8}\n",
+    "$$\n",
+    "\n",
+    "Then we can get back to the transition probability:\n",
+    "\n",
+    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\left| \\int_{0}^{t} \\sin(\\omega t)\\frac{3a^4}{8} e^{i\\omega_{fi}t} dt \\right|^2$$\n",
+    "\n",
+    "We can now calculate the transition frequency: $\\omega = \\frac{E_f - E_i}{\\hbar} = \\frac{E_{210} - E_{100}}{\\hbar}$\n",
+    "\n",
+    "And supposing that we are treating the hydrogen atom, we go back to the energy levels: $E_n = -\\frac{13.6}{n^2}eV$. Therefore:\n",
+    "\n",
+    "$$\\omega = \\frac{E_{210} - E_{100}}{\\hbar} = \\frac{-\\frac{13.6}{2^2} - (-\\frac{13.6}{1^2})}{\\hbar} = \\frac{-13.6}{4} + \\frac{13.6}{1} = \\frac{13.6}{4}\\approx 3.4$$\n",
+    "\n",
+    "Then we can write the transition probability as:\n",
+    "\n",
+    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\cdot \\frac{3a^4}{8}\\left| \\int_{0}^{t} \\sin(\\omega t) e^{i3.4t} dt \\right|^2$$\n",
+    "$$= \\frac{3a^4}{8\\hbar^2} \\frac{((3.4i) e^{(3.4i)t} \\sin(tw) - e^{(3.4i)t}w \\cos(tw) + w)^2}{(w^2 - 11.56)^2}$$\n",
+    "$$=\\frac{e^{(0.\\, +6.8 i) t} \\left(-(0.\\, +3.4 i) w \\sin (2 t w)+\\left(0.5 w^2+5.78\\right) \\cos (2 t w)+0.5 w^2-5.78\\right)+w \\left(1. w+e^{(0.\\, +3.4 i) t} (-2. w \\cos (t w)+(0.\\, +6.8 i) \\sin (t w))\\right)}{w^4-23.12 w^2+133.634}$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -541,10 +596,14 @@
     "W_{fi} = \\frac{2\\pi}{\\hbar}\\left|\\langle \\psi_f | V | \\psi_i \\rangle\\right|^2 \\rho(E) = \\frac{2\\pi}{\\hbar} \\left|eE_0 \\left(\\frac{1}{\\sqrt{\\pi}}\\right)\\left(\\frac{1}{a_0}\\right)^{\\frac{3}{2}} \\int R_f(r)Y_{10}(\\theta, \\phi) (r \\cos \\theta) e^{-r/a_0} dV\\right|^2 \\frac{V}{2\\pi^2}\\left(2m\\right)^{\\frac{3}{2}}\\sqrt{E}.\n",
     "$$\n",
     "\n",
-    "This equation gives the transition rate from the ground state of the hydrogen atom to a continuum state as a function of the energy $E$ of the final state, the polarization of the electric field, and the angle of emission of the electron.\n",
-    "\n",
-    "This is a challenging problem that requires a good understanding of quantum mechanics and some mathematical skills. The details of the calculation can vary depending on the specifics of the problem."
+    "This equation gives the transition rate from the ground state of the hydrogen atom to a continuum state as a function of the energy $E$ of the final state, the polarization of the electric field, and the angle of emission of the electron."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
