--- a/problem_sets/Applied_QM/04/solution.ipynb
+++ b/problem_sets/Applied_QM/04/solution.ipynb
@@ -128,24 +128,24 @@
     "$$\n",
     "\n",
     "$$\n",
-    " = \\sqrt{{3}} \\sqrt{\\frac{2}{3}}\\int_0^{\\infty}dr\\,r^3\\,e^{-2r/a}\\, = \\sqrt{2}\\int_0^{\\infty}dr\\,r^3\\,e^{-2r/a}\\ = \\frac{3a^4}{8}\n",
+    " = \\sqrt{{3}} \\sqrt{\\frac{2}{3}}\\int_0^{\\infty}dr\\,r^3\\,e^{-2r/a}\\, = \\sqrt{2}\\int_0^{\\infty}dr\\,r^4\\,e^{-2r/a}\\ = \\frac{3a^5}{4}\n",
     "$$\n",
     "\n",
     "Then we can get back to the transition probability:\n",
     "\n",
-    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\left| \\int_{0}^{t} \\sin(\\omega t)\\frac{3a^4}{8} e^{i\\omega_{fi}t} dt \\right|^2$$\n",
+    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\left| \\int_{0}^{t} \\sin(\\omega t)\\frac{3a^5}{4} e^{i\\omega_{fi}t} dt \\right|^2$$\n",
     "\n",
     "We can now calculate the transition frequency: $\\omega = \\frac{E_f - E_i}{\\hbar} = \\frac{E_{210} - E_{100}}{\\hbar}$\n",
     "\n",
     "And supposing that we are treating the hydrogen atom, we go back to the energy levels: $E_n = -\\frac{13.6}{n^2}eV$. Therefore:\n",
     "\n",
-    "$$\\omega = \\frac{E_{210} - E_{100}}{\\hbar} = \\frac{-\\frac{13.6}{2^2} - (-\\frac{13.6}{1^2})}{\\hbar} = \\frac{-13.6}{4} + \\frac{13.6}{1} = \\frac{13.6}{4}\\approx 3.4$$\n",
+    "$$\\omega = \\frac{E_{210} - E_{100}}{\\hbar} = \\frac{-\\frac{13.6}{2^2} - (-\\frac{13.6}{1^2})}{\\hbar} = \\frac{-13.6}{4} + \\frac{13.6}{1} = \\frac{3\\cdot 13.6}{4}\\approx 10.2$$\n",
     "\n",
     "Then we can write the transition probability as:\n",
     "\n",
-    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\cdot \\frac{3a^4}{8}\\left| \\int_{0}^{t} \\sin(\\omega t) e^{i3.4t} dt \\right|^2$$\n",
-    "$$= \\frac{3a^4}{8\\hbar^2} \\frac{((3.4i) e^{(3.4i)t} \\sin(tw) - e^{(3.4i)t}w \\cos(tw) + w)^2}{(w^2 - 11.56)^2}$$\n",
-    "$$=\\frac{e^{(0.\\, +6.8 i) t} \\left(-(0.\\, +3.4 i) w \\sin (2 t w)+\\left(0.5 w^2+5.78\\right) \\cos (2 t w)+0.5 w^2-5.78\\right)+w \\left(1. w+e^{(0.\\, +3.4 i) t} (-2. w \\cos (t w)+(0.\\, +6.8 i) \\sin (t w))\\right)}{w^4-23.12 w^2+133.634}$$"
+    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\cdot \\frac{3a^5}{4}\\left| \\int_{0}^{t} \\sin(\\omega t) e^{i3.4t} dt \\right|^2$$\n",
+    "$$= \\frac{3a^5}{4\\hbar^2} \\frac{((3.4i) e^{(3.4i)t} \\sin(tw) - e^{(3.4i)t}w \\cos(tw) + w)^2}{(w^2 - 11.56)^2}$$\n",
+    "$$=\\frac{3a^5}{4\\hbar^2} \\frac{(10.2 i) e^{(0.\\, +10.2 i) t} \\sin (t w)-1. w e^{(0.\\, +10.2 i) t} \\cos (t w)+1. w}{w^2-104.04}$$"
    ]
   },
   {
