Advance on first point

--- a/problem_sets/Applied_QM/04/solution.ipynb
+++ b/problem_sets/Applied_QM/04/solution.ipynb
@@ -39,29 +39,59 @@
     "\n",
     "$$\\delta H = eE z \\sin(\\omega t) \\quad \\Rightarrow \\quad H = H_0 + \\delta H$$\n",
     "\n",
-    "where $H_0$ is the unperturbed Hamiltonian. We can compute the probability of transition from the initial state $|i\\rangle$ to the final state $|f\\rangle$ using:\n",
+    "where $H_0$ is the unperturbed Hamiltonian. Where $|i\\rangle$ is the initial state and $|f\\rangle$ is the final state, by replacing from the problem statement, we get:\n",
     "\n",
-    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\left| \\int_{0}^{\\infty} \\langle f|\\delta H|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
+    "$$\\langle f|\\delta H|i\\rangle = eE_0\\langle f|z\\sin(\\omega t)|i\\rangle = eE_0\\langle p|z\\sin(\\omega t)|s\\rangle$$\n",
+    "\n",
+    "where $E_0$ is the electric field amplitude. Now, we can write the explicit general form for the $s$ and $p$ states:\n",
+    "\n",
+    "$$\\langle f|\\delta H|i\\rangle = eE_0\\langle n`m`l`|z\\sin(\\omega t)|nml\\rangle$$\n",
+    "\n",
+    "where $nml$ are the quantum numbers for the $s$ state and $n`m`l`$ are the quantum numbers for the $p$ state. Since we need the matrix element for the $z$ operator, we can write:\n",
+    "\n",
+    "$$\\langle n'm'l'|[\\hat L_z, \\hat z] |nml\\rangle = (m-m')\\langle n'm'l'|z|nml\\rangle$$\n",
+    "\n",
+    "where we have used the fact that $[\\hat L_z, \\hat z] = i\\hbar \\hat L_z$. Thus, we notice that all the transitions get to zero unless $m = m'$. And the $s$ state has $m = 0$, therefore we can infer that the only possible transition is from $m` = 0$ to $m = 0$. \n",
+    "\n",
+    "$$\\ket{f} = \\ket{110}$$\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll use time-dependent perturbation theory to solve this problem. This allows us to calculate the probability of a transition from an initial state to a final state when a perturbation is introduced. The initial state here is the $s$ state and the final state is the $p$ state with $m_l=0$.\n",
+    "\n",
+    "The time-dependent perturbation Hamiltonian for this problem is given by:\n",
+    "\n",
+    "$$\\hat{H}' = - \\vec{d} \\cdot \\vec{E} = -z e E_0 \\sin(\\omega t)$$\n",
+    "\n",
+    "where $d_z$ is the dipole moment operator in the $z$ direction and we simplified it to $d$ as $m_l=0$. Using the Fermi's golden rule for time-dependent perturbations, the transition probability is:\n",
+    "\n",
+    "$$P(i\\rightarrow f) = \\frac{1}{\\hbar^2} \\left| \\int_{0}^{t} \\langle f|\\delta H|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
     "\n",
     "where $\\omega_{fi} = (E_f - E_i)/\\hbar$ is the transition frequency. By replacing the perturbation, we get:\n",
     "\n",
-    "$$P(i\\rightarrow f) = \\frac{(eE_0 z)^2}{\\hbar^2} \\left| \\int_{0}^{\\infty} \\langle f| \\sin(\\omega t)|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
-    "$$P(i\\rightarrow f) = \\frac{(eE_0 z)^2}{4\\hbar^2} \\left| \\int_{0}^{\\infty} \\langle f| e^{-i\\omega t} - e^{i\\omega t}|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
+    "$$P(i\\rightarrow f) = \\frac{eE_0}{\\hbar^2} \\left| \\int_{0}^{t} \\langle f|z\\cdot sin(\\omega t)|i\\rangle e^{i\\omega_{fi}t} dt \\right|^2$$\n",
     "\n",
-    "## b)\n",
+    "$$\\langle f|z\\cdot sin(\\omega t)|i\\rangle= -q \\langle p|\\hat{z}|s\\rangle E_0 \\sin(\\omega t) = V_{ps} \\sin(\\omega t)$$\n",
     "\n",
-    "The probability that the system is at $t=0$ in a certain state $|\\psi\\rangle$ is given by the square of the amplitude of the system being in that state. The amplitude is given by the inner product of the state of the system at $t=0$. That is, \n",
+    "$$P_{s\\rightarrow p}(t) = \\frac{|V_{ps}|^2}{\\hbar^2} \\frac{\\sin^2[(\\omega_{ps} - \\omega)t/2]}{(\\omega_{ps} - \\omega)^2}$$\n",
     "\n",
-    "$$P(i\\rightarrow \\psi) = |\\langle \\psi|i\\rangle|^2$$\n",
+    "Now, lets calculate the transition matrix element $V_{ps}$:\n",
     "\n",
-    "If the system is initially in $|i\\rangle$ is the $s$ state. The final states $|\\psi\\rangle$ are the $p$ states with $m_l = -1, 0, 1$. Now, we need to calculate the overlap integral between the $s$ state and each of the $p$ states. However, in the hydrogen atom (or hydrogen-like atoms), the $s$ and $p$ states are orthogonal, meaning that their overlap integral is zero:\n",
-    "\n",
-    "$$\\langle p_{ml}|s\\rangle = 0$$\n",
-    "\n",
-    "where $ml = -1, 0, 1$ are the possible values for the $p$ states. \n",
-    "\n",
-    "So the probability that the system is at $t=0$ in each of the $p$ states is zero. This makes sense, because at $t=0$ the perturbation has not yet been applied, so the system has not had a chance to transition from the $s$ state to a $p$ state. The system remains in the $s$ state until the perturbation is turned on."
+    "$$\\langle f|\\delta H|i\\rangle = eE_0\\langle 110|z\\sin(\\omega t)|100\\rangle$$\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
