--- a/problem_sets/Applied_QM/04/solution.ipynb
+++ b/problem_sets/Applied_QM/04/solution.ipynb
@@ -473,7 +473,6 @@
     "    # Exact ground state energy for an infinite square well potential\n",
     "    E1 = np.pi**2 * hbar**2 / (2 * m * L**2)\n",
     "\n",
-    "    # Compute the error\n",
     "    error = abs(E1 - E_var) / E1\n",
     "\n",
     "    print(f\"Optimal C: {C_opt}\")\n",
@@ -540,17 +539,11 @@
     "\n",
     "$$V = eE_0z \\cos(\\omega t),$$\n",
     "\n",
-    "where $ z $ is the z-component of the position operator.\n",
+    "where $ z $ is the z-component of the position operator. Now, let's use first-order time-dependent perturbation theory to calculate the transition rate from the ground state of the hydrogen atom to a continuum state. According to Fermi's Golden Rule, the transition rate is given by:\n",
     "\n",
-    "Now, let's use first-order time-dependent perturbation theory to calculate the transition rate from the ground state of the hydrogen atom to a continuum state. According to Fermi's Golden Rule, the transition rate is given by:\n",
+    "$$P_{fi} = \\frac{{2\\pi}}{{\\hbar}} \\left| \\langle \\psi_f | V | \\psi_i \\rangle \\right|^2 \\rho(E),$$\n",
     "\n",
-    "$$W_{fi} = \\frac{{2\\pi}}{{\\hbar}} \\left| \\langle \\psi_f | V | \\psi_i \\rangle \\right|^2 \\rho(E),$$\n",
-    "\n",
-    "where $ | \\psi_i \\rangle $ is the initial state, $ | \\psi_f \\rangle $ is the final state, $ V $ is the interaction Hamiltonian, and $ \\rho(E) $ is the density of final states.\n",
-    "\n",
-    "The initial state of the electron is the ground state of the hydrogen atom, which is denoted by $ | \\psi_i \\rangle = |1s \\rangle $. The final state is a continuum state, which is denoted by $ | \\psi_f \\rangle = |p, \\boldsymbol{\\epsilon} \\rangle $. Here, $ p $ is the momentum of the electron, and $ \\boldsymbol{\\epsilon} $ is the energy of the electron.\n",
-    "\n",
-    "We can write the matrix element as:\n",
+    "where $ | \\psi_i \\rangle $ is the initial state, $ | \\psi_f \\rangle $ is the final state, $ V $ is the interaction Hamiltonian, and $ \\rho(E) $ is the density of final states. The initial state of the electron is the ground state of the hydrogen atom, which is denoted by $ | \\psi_i \\rangle = |1s \\rangle $. The final state is a continuum state, which is denoted by $ | \\psi_f \\rangle = |p, \\boldsymbol{\\epsilon} \\rangle $. Here, $ p $ is the momentum of the electron, and $ \\boldsymbol{\\epsilon} $ is the energy of the electron. We can write the matrix element as:\n",
     "\n",
     "$$\\langle \\psi_f | V | \\psi_i \\rangle = eE_0 \\langle \\psi_f | z | \\psi_i \\rangle.$$\n",
     "\n",
@@ -558,9 +551,7 @@
     "\n",
     "$$\\langle \\psi_f | z | \\psi_i \\rangle = \\int \\psi_f^* (r \\cos \\theta) \\psi_i dV,$$\n",
     "\n",
-    "where $ dV = r^2 \\sin \\theta dr d\\theta d\\phi $ is the volume element in spherical coordinates.\n",
-    "\n",
-    "The wavefunctions $ \\psi_i $ and $ \\psi_f $ can be written in terms of spherical harmonics and radial wavefunctions. For the hydrogen atom:\n",
+    "where $ dV = r^2 \\sin \\theta dr d\\theta d\\phi $ is the volume element in spherical coordinates. The wavefunctions $ \\psi_i $ and $ \\psi_f $ can be written in terms of spherical harmonics and radial wavefunctions. For the hydrogen atom:\n",
     "\n",
     "$$\\psi_i = R_{10}(r)Y_{00}(\\theta, \\phi) = \\frac{1}{\\sqrt{\\pi}} \\left(\\frac{1}{a_0}\\right)^{3/2} e^{-r/a_0},$$\n",
     "\n",
@@ -570,9 +561,7 @@
     "\n",
     "where $R_f(r)$ is the radial wavefunction for a free electron, $Y_{1m}(\\theta, \\phi)$ is the spherical harmonic for $l = 1$ and $m$ can be $-1$, $0$, or $1$, and $p$ is the momentum of the electron.\n",
     "\n",
-    "In the electric dipole approximation, the electron can absorb a photon and transition from an $s$ orbital to a $p$ orbital. Therefore, we need to calculate three integrals corresponding to $m = -1$, $0$, and $1$.\n",
-    "\n",
-    "The matrix element $\\langle\\psi_f|z|\\psi_i\\rangle$ will be nonzero only for $m = 0$, because only the spherical harmonic $Y_{10}(\\theta, \\phi)$ contains a factor of $\\cos \\theta$, which is necessary to integrate with the operator $r \\cos \\theta$ in the interaction Hamiltonian. So, we can write:\n",
+    "In the electric dipole approximation, the electron can absorb a photon and transition from an $s$ orbital to a $p$ orbital. Therefore, we need to calculate three integrals corresponding to $m = -1$, $0$, and $1$. The matrix element $\\langle\\psi_f|z|\\psi_i\\rangle$ will be nonzero only for $m = 0$, because only the spherical harmonic $Y_{10}(\\theta, \\phi)$ contains a factor of $\\cos \\theta$, which is necessary to integrate with the operator $r \\cos \\theta$ in the interaction Hamiltonian. So, we can write:\n",
     "\n",
     "$$\n",
     "\\langle \\psi_f | z | \\psi_i \\rangle = eE_0 \\int \\psi_f^* (r \\cos \\theta) \\psi_i dV.\n",
@@ -593,17 +582,15 @@
     "Finally, substituting the expressions for the matrix element and the density of states into Fermi's Golden Rule, we obtain:\n",
     "\n",
     "$$\n",
-    "W_{fi} = \\frac{2\\pi}{\\hbar}\\left|\\langle \\psi_f | V | \\psi_i \\rangle\\right|^2 \\rho(E) = \\frac{2\\pi}{\\hbar} \\left|eE_0 \\left(\\frac{1}{\\sqrt{\\pi}}\\right)\\left(\\frac{1}{a_0}\\right)^{\\frac{3}{2}} \\int R_f(r)Y_{10}(\\theta, \\phi) (r \\cos \\theta) e^{-r/a_0} dV\\right|^2 \\frac{V}{2\\pi^2}\\left(2m\\right)^{\\frac{3}{2}}\\sqrt{E}.\n",
+    "P_{fi} = \\frac{2\\pi}{\\hbar}\\left|\\langle \\psi_f | V | \\psi_i \\rangle\\right|^2 \\rho(E) = \\frac{2\\pi}{\\hbar} \\left|eE_0 \\left(\\frac{1}{\\sqrt{\\pi}}\\right)\\left(\\frac{1}{a_0}\\right)^{\\frac{3}{2}} \\int R_f(r)Y_{10}(\\theta, \\phi) (r \\cos \\theta) e^{-r/a_0} dV\\right|^2 \\frac{V}{2\\pi^2}\\left(2m\\right)^{\\frac{3}{2}}\\sqrt{E}.\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "=\\frac{V e^2E_0^2}{\\hbar} \\left|\\left(\\frac{1}{\\sqrt{\\pi}a_0}\\right)^{\\frac{3}{2}} \\int R_f(r)Y_{10} r \\cos \\theta e^{-r/a_0} dV\\right|^2 \\left(2m\\right)^{\\frac{3}{2}}\\sqrt{E}.\n",
     "$$\n",
     "\n",
     "This equation gives the transition rate from the ground state of the hydrogen atom to a continuum state as a function of the energy $E$ of the final state, the polarization of the electric field, and the angle of emission of the electron."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
