--- a/problem_sets/Applied_QM/04/solution.ipynb
+++ b/problem_sets/Applied_QM/04/solution.ipynb
@@ -184,26 +184,26 @@
     "\n",
     "Let's compute each of these matrix elements individually.\n",
     "\n",
-    "1. $\\braket{n|H|n} = \\braket{n|H_0|n} + \\braket{n|H'|n} = m_n c^2 + \\epsilon$\n",
+    "1. $\\braket{n|H|n} = \\braket{n|H_0|n} + \\braket{n|H'|n} = m_n c^2$\n",
     "2. $\\braket{n|H|\\bar{n}} = \\braket{n|H_0|\\bar{n}} + \\braket{n|H'|\\bar{n}} = \\epsilon$\n",
     "3. $\\braket{\\bar{n}|H|n} = \\braket{\\bar{n}|H_0|n} + \\braket{\\bar{n}|H'|n} = \\epsilon$\n",
-    "4. $\\braket{\\bar{n}|H|\\bar{n}} = \\braket{\\bar{n}|H_0|\\bar{n}} + \\braket{\\bar{n}|H'|\\bar{n}} = m_n c^2 + \\epsilon$\n",
+    "4. $\\braket{\\bar{n}|H|\\bar{n}} = \\braket{\\bar{n}|H_0|\\bar{n}} + \\braket{\\bar{n}|H'|\\bar{n}} = m_n c^2$\n",
     "\n",
     "So, the Hamiltonian becomes:\n",
     "\n",
-    "$$H = \\begin{bmatrix} m_n c^2 + \\epsilon & \\epsilon \\\\ \\epsilon & m_n c^2 + \\epsilon \\end{bmatrix}$$\n",
+    "$$H = \\begin{bmatrix} m_n c^2 & \\epsilon \\\\ \\epsilon & m_n c^2 \\end{bmatrix}$$\n",
     "\n",
     "where $I$ is the identity matrix and $\\lambda$ represents the eigenvalues. This yields the equation:\n",
     "\n",
-    "$$\\text{det}(H - \\lambda I) = 0 \\Rightarrow \\begin{vmatrix} m_n c^2 + \\epsilon - \\lambda & \\epsilon \\\\ \\epsilon & m_n c^2 + \\epsilon - \\lambda \\end{vmatrix} = 0$$\n",
+    "$$\\text{det}(H - \\lambda I) = 0 \\Rightarrow \\begin{vmatrix} m_n c^2 - \\lambda & \\epsilon \\\\ \\epsilon & m_n c^2 - \\lambda \\end{vmatrix} = 0$$\n",
     "\n",
     "which simplifies to:\n",
     "\n",
-    "$$(m_n c^2 + \\epsilon - \\lambda)^2 - \\epsilon^2 = 0$$\n",
+    "$$(m_n c^2 - \\lambda)^2 - \\epsilon^2 = 0$$\n",
     "\n",
     "The solutions to this equation are the eigenvalues of the Hamiltonian:\n",
     "\n",
-    "$$\\lambda_{\\pm} = m_n c^2 + \\epsilon \\pm \\epsilon$$\n",
+    "$$\\lambda_{\\pm} = m_n c^2 \\pm \\epsilon$$\n",
     "\n",
     "The corresponding eigenvectors can be found by substituting these eigenvalues back into the equation $(H - \\lambda I)\\ket{v} = 0$, and solving for the eigenvector $\\ket{v}$.\n",
     "\n",
