Add schrodinger solution

--- a/notes/02_Applied_QM/01_scattering/00_th_scattering.ipynb
+++ b/notes/02_Applied_QM/01_scattering/00_th_scattering.ipynb
@@ -111,11 +111,16 @@
     "\n",
     "$$f(\\theta) = \\frac{\\sqrt{4\\pi}}{k^2} \\sum_{l=0}^{\\infty} \\sqrt{2l+1} e^{i\\delta_l} Y_{lm}(\\theta, \\phi) sin(\\delta_l)$$\n",
     "\n",
-    "The new task is simply to remove the $$Y_{lm}(\\theta, \\phi)$$:\n",
+    "The new task is simply to remove the $$Y_{lm}(\\theta, \\phi)$$\n",
     "\n",
     "$$\\sigma = \\int |f(\\theta, \\phi)|^2 d\\Omega = \\frac{4\\pi}{k^2} \\sum_{l=0}^{\\infty} (2l+1\n",
     " ) sin^2(\\delta_l).$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
